feat: 新增移动端嵌套地球页面

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>数字乡村实景多维可视化云系统</title>
+  <title>乡村千寻多维可视化云平台</title>
 </head>
 
 <body>
